--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,9 @@
 
 	<distributionManagement>
 		<repository>
-			<id>dnastack-releases</id>
-			<name>NexusDnastackReleases</name>
-			<url>https://nexus.dnastack.com/content/repositories/releases/</url>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/DNAstack/dnastack-packages</url>
 		</repository>
 	</distributionManagement>
 
