--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 		<maven.source.plugin.version>3.2.0</maven.source.plugin.version>
 		<build-helper-maven-plugin>3.2.0</build-helper-maven-plugin>
+		<maven-surefire-plugin>3.0.0-M5</maven-surefire-plugin>
 		<lombok.version>1.18.20</lombok.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		<junit.version>5.7.1</junit.version>
@@ -105,6 +106,14 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
 			</plugin>
         </plugins>
 	</build>
