--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
 
 	<distributionManagement>
 		<repository>
-			<id>github</id>
-			<name>GitHub OWNER Apache Maven Packages</name>
+			<id>github-public</id>
+			<name>Public GitHub DNAstack Apache Maven Packages</name>
 			<url>https://maven.pkg.github.com/DNAstack/dnastack-public-packages</url>
 		</repository>
 	</distributionManagement>
