[#175910746] [#179578114] Update pom to match Maven Central publishing requirements.

--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.dnastack</groupId>
 	<artifactId>actuator-e2e-test</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>actuator-e2e-test</name>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>${project.groupId}:${project.artifactId}</name>
+	<description>A library to customizably test the security and response configurations of a Spring Boot application's /actuator endpoints.</description>
+	<url>https://www.github.com/DNAstack/actuator-e2e-test</url>
+
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Fizz Ahmed</name>
+			<email>fizz@dnastack.com</email>
+			<organization>DNAstack</organization>
+			<organizationUrl>https://www.dnastack.com</organizationUrl>
+		</developer>
+	</developers>
 
 	<properties>
 		<java.version>11</java.version>
@@ -23,20 +39,11 @@
 		<rest.assured.version>4.4.0</rest.assured.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>dnastack-releases</id>
-			<name>NexusDnastackReleases</name>
-			<url>https://nexus.dnastack.com/content/repositories/releases/</url>
-		</repository>
-	</repositories>
-
 	<distributionManagement>
-		<repository>
-			<id>github-public</id>
-			<name>Public GitHub DNAstack Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/DNAstack/dnastack-public-packages</url>
-		</repository>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
 	</distributionManagement>
 
 	<dependencyManagement>
@@ -115,6 +122,78 @@
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
-        </plugins>
+		</plugins>
 	</build>
+
+	<!-- Maven Central Release Profile -->
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<configuration>
+							<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+						</configuration>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.8</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+							<stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
+							<keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<scm>
+		<connection>scm:git:git://github.com/DNAstack/actuator-e2e-test.git</connection>
+		<developerConnection>scm:git:ssh://github.com:DNAstack/actuator-e2e-test.git</developerConnection>
+		<url>https://github.com/DNAstack/actuator-e2e-test/tree/main</url>
+	</scm>
+
 </project>
